updated routes and scripts
